5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1595_1017.log
== TEST (2019-04-11 01:27:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))

t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:37:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))

t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
R=6371.01

d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print("A distancia e",round(d, 2),"xa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:39:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Longitude de P1: ")))

lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Longitude de P2: ")))
 
R=6371.01

d = R*acos(sin(lat1)*sin(latt2)+cos(lat1)*cos(lat2)*cos(long1-long2))

print("A distancia e",round(d, 2),"xa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lat1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:40:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lat1 = radians(float(input("Latitude de Ponto 1: ")))
long1 = radians(float(input("Longitude de Ponto 1: ")))

lat2 = radians(float(input("Latitude de Ponto 2: ")))
long2 = radians(float(input("Longitude de Ponto 2: ")))
 
R=6371.01

d = R*acos(sin(lat1)*sin(latt2)+cos(lat1)*cos(lat2)*cos(long1-long2))

print("A distancia e",round(d, 2),"xa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lat1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:40:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lat1 = radians(float(input("Latitude do Ponto 1: ")))
long1 = radians(float(input("Longitude do Ponto 1: ")))

lat2 = radians(float(input("Latitude do Ponto 2: ")))
long2 = radians(float(input("Longitude do Ponto 2: ")))
 
R=6371.01

d = R*acos(sin(lat1)*sin(latt2)+cos(lat1)*cos(lat2)*cos(long1-long2))

print("A distancia e",round(d, 2),"xa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lat1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:56:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
L1 =radians(float(input("Latitude do Ponto 1: ")))
l1 =radians(float(input("Longitude do Ponto 1: ")))
L2 =radians(float(input("Latitude do Ponto 2: ")))
l2 =radians(float(input("Longitude do Ponto 2: ")))
 
R=6371.01

d = R*acos(sin(lat1)*sin(latt2)+cos(lat1)*cos(lat2)*cos(long1-long2))

print((round(d, 2),"xa")
-- ERROR:
File "XXXX", line 15
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:01:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
L1 =radians(float(input("Latitude do Ponto 1: ")))
l1 =radians(float(input("Longitude do Ponto 1: ")))
L2 =radians(float(input("Latitude do Ponto 2: ")))
l2 =radians(float(input("Longitude do Ponto 2: ")))
 
R=6371.01

d = ((R)*(acos)*(sin(lat1))*(sin*(latt2))+(cos*(lat1))*(cos*(lat2))*(cos*(long1-long2)))

print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d = ((R)*(acos)*(sin(lat1))*(sin*(latt2))+(cos*(lat1))*(cos*(lat2))*(cos*(long1-long2)))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:08:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
L1 =radians(float(input("Latitude do Ponto 1: ")))
l1 =radians(float(input("Longitude do Ponto 1: ")))
L2 =radians(float(input("Latitude do Ponto 2: ")))
l2 =radians(float(input("Longitude do Ponto 2: ")))
 
R=6371.01

d = ((R)*(acos)*(sin(L1))*(sin*(L2))+(cos*(L1))*(cos*(L2))*(cos*(l1-l2)))

print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d = ((R)*(acos)*(sin(L1))*(sin*(L2))+(cos*(L1))*(cos*(L2))*(cos*(l1-l2)))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:30:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R*acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- OUTPUT:
50.44 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:32:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R*acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- EXECUTION TIME:
0.100114
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:32:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R*acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- EXECUTION TIME:
0.15905
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:33:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R*acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- EXECUTION TIME:
0.13965
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:33:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R*acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- OUTPUT:
50.44 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:35:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- EXECUTION TIME:
0.14583
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:35:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01 km
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- ERROR:
File "XXXX", line 9
    R=6371.01 km
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:35:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01km
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- ERROR:
File "XXXX", line 9
    R=6371.01km
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:36:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2),"km")
-- OUTPUT:
50.44 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:36:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d =( R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d, 2),"km")
-- OUTPUT:
50.44 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:38:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d =( R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d, 2),"km")
-- EXECUTION TIME:
0.141252
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:40:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d =( R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))

print("A distancia e" , round(d, 2) , "km")
-- OUTPUT:
A distancia e 50.44 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:41:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d =( R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))

print("A distancia e" , round(d, 2) , "km")
-- EXECUTION TIME:
0.162892
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
A distancia e 50.44 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:43:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d =(( R * acos)(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d, 2) , "km")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d =(( R * acos)(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:44:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d =( R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2) , "km")
-- ERROR:
File "XXXX", line 12
    print(round(d, 2) , "km")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:45:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d =( R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2) , "km")
-- ERROR:
File "XXXX", line 12
    print(round(d, 2) , "km")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:46:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d =( R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- ERROR:
File "XXXX", line 12
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:46:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:47:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:48:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude do Ponto 1: ")))
g1 =radians(float(input("Longitude do Ponto 1: ")))
t2 =radians(float(input("Latitude do Ponto 2: ")))
g2 =radians(float(input("Longitude do Ponto 2: ")))
R=6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- EXECUTION TIME:
0.208098
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
